--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
-  }
+    "@vitejs/plugin-react": "^4.0.0",  // atau versi terbaru
+    "vite": "^4.5.0"                    // atau versi Anda
+}
+
 }
