--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",  // atau versi terbaru
-    "vite": "^4.5.0"                    // atau versi Anda
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
